--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -11,6 +11,7 @@ coreschema==0.0.4
 cryptography==40.0.2
 defusedxml==0.7.1
 Django==3.2
+django-cors-headers==3.14.0
 django-filter==2.4.0
 django-templated-mail==1.1.1
 djangorestframework==3.12.4
