--- a/.github/workflows/foodgram_workflow.yml
+++ b/.github/workflows/foodgram_workflow.yml
@@ -60,6 +60,28 @@ jobs:
           context: ./backend
           tags: delonart/foodgram-backend:latest
 
+  build_and_push_frontend_to_docker_hub:
+    name: Pushing frontend image to Docker Hub
+    runs-on: ubuntu-latest
+    needs:
+      - tests
+    steps:
+      - name: Check out the repo
+        uses: actions/checkout@v2
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
+      - name: Login to Docker
+        uses: docker/login-action@v1
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+      - name: Push to Docker Hub
+        uses: docker/build-push-action@v2
+        with:
+          push: true
+          context: ./frontend
+          tags: delonart/foodgram-frontend:latest
+
   deploy:
     runs-on: ubuntu-latest
     needs: build_and_push_to_docker_hub
@@ -73,9 +95,18 @@ jobs:
         script: |
           # Выполняет pull образа с DockerHub
           sudo docker pull delonart/foodgram-backend
-          #остановка всех контейнеров
-          sudo docker stop $(sudo docker ps -a -q)
-          sudo docker run --rm -d -p 8000:8000 delonart/foodgram-backend
+          sudo docker-compose stop
+          sudo docker-compose rm web
+          touch .env
+          echo DB_ENGINE=${{ secrets.DB_ENGINE }} >> .env
+          echo DB_NAME=${{ secrets.DB_NAME }} >> .env
+          echo POSTGRES_USER=${{ secrets.POSTGRES_USER }} >> .env
+          echo POSTGRES_PASSWORD=${{ secrets.POSTGRES_PASSWORD }} >> .env
+          echo DB_HOST=${{ secrets.DB_HOST }} >> .env
+          echo DB_PORT=${{ secrets.DB_PORT }} >> .env
+          sudo docker-compose up -d
+          sudo docker-compose exec web python3 manage.py migrate
+          sudo docker-compose exec web python3 manage.py collectstatic --no-input
 
   send_message:
     runs-on: ubuntu-latest
