--- a/.github/workflows/foodgram_workflow.yml
+++ b/.github/workflows/foodgram_workflow.yml
@@ -57,7 +57,7 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           push: true
-          context: ../backend
+          context: ./backend
           tags: delonart/foodgram-backend:latest
 
   build_and_push_frontend_to_docker_hub:
@@ -79,7 +79,7 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           push: true
-          context: ../frontend
+          context: ./frontend
           tags: delonart/foodgram-frontend:latest
 
   deploy:
