--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -2,6 +2,6 @@ FROM python:3.8.5
 
 WORKDIR /app
 COPY requirements.txt .
-RUN pip install -r /app/requirements.txt
+RUN pip3 install -r /app/requirements.txt --no-cache-dir
 COPY . .
-CMD gunicorn backend.wsgi:application --bind 0.0.0.0:8000
+CMD ["gunicorn", "backend.wsgi:application", "--bind", "0:8000" ]
