--- a/.github/workflows/foodgram_workflow.yml
+++ b/.github/workflows/foodgram_workflow.yml
@@ -94,9 +94,11 @@ jobs:
         key: ${{ secrets.SSH_KEY }}
         script: |
           # Выполняет pull образа с DockerHub
-          sudo docker pull delonart/foodgram-backend
-          sudo docker-compose stop
-          sudo docker-compose rm web
+          cd infra
+          sudo docker-compose down
+          sudo docker rmi delonart/foodgram-backend:latest
+          sudo docker rmi delonart/foodgram-frontend:latest
+          sudo docker pull delonart/foodgram-backend:latest
           touch .env
           echo DB_ENGINE=${{ secrets.DB_ENGINE }} >> .env
           echo DB_NAME=${{ secrets.DB_NAME }} >> .env
