--- a/.github/workflows/foodgram_workflow.yml
+++ b/.github/workflows/foodgram_workflow.yml
@@ -99,6 +99,7 @@ jobs:
           sudo docker rmi delonart/foodgram-backend:latest
           sudo docker rmi delonart/foodgram-frontend:latest
           sudo docker pull delonart/foodgram-backend:latest
+          sudo docker pull delonart/foodgram-frontend:latest
           touch .env
           echo DB_ENGINE=${{ secrets.DB_ENGINE }} >> .env
           echo DB_NAME=${{ secrets.DB_NAME }} >> .env
@@ -107,8 +108,8 @@ jobs:
           echo DB_HOST=${{ secrets.DB_HOST }} >> .env
           echo DB_PORT=${{ secrets.DB_PORT }} >> .env
           sudo docker-compose up -d
-          sudo docker-compose exec web python3 manage.py migrate
-          sudo docker-compose exec web python3 manage.py collectstatic --no-input
+          sudo docker-compose exec web python manage.py migrate
+          sudo docker-compose exec web python manage.py collectstatic --no-input
 
   send_message:
     runs-on: ubuntu-latest
