--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -32,6 +32,9 @@ services:
       - ../frontend/build:/usr/share/nginx/html/
       - ../docs/:/usr/share/nginx/html/api/docs/
 
+    depends_on:
+      - web
+
 volumes:
   static_value:
   media_value:
