--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -4,6 +4,24 @@ server {
         root /usr/share/nginx/html;
         try_files $uri $uri/redoc.html;
     }
+    location /media/ {
+        root /var/html;
+    }
+    location /static/admin {
+        root /var/html;
+    }
+     location /static/rest_framework/ {
+        root /var/html/;
+    }
+    location /admin/ {
+        proxy_pass http://web:8000/admin/;
+    }
+    location /api/ {
+        proxy_set_header Host $host;
+        proxy_set_header        X-Forwarded-Host $host;
+        proxy_set_header        X-Forwarded-Server $host;
+        proxy_pass http://web:8000/api/;
+    }
     location / {
         root /usr/share/nginx/html;
         index  index.html index.htm;
