--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -1,5 +1,6 @@
 server {
     listen 80;
+    server_name 158.160.20.67;
     location /api/docs/ {
         root /usr/share/nginx/html;
         try_files $uri $uri/redoc.html;
