--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -37,5 +37,8 @@ server {
       location = /50x.html {
         root   /var/html/frontend/;
       }
+      http {
+      client_max_body_size 5M;
+}
 
 }
