--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -31,7 +31,8 @@ services:
       - ./nginx.conf:/etc/nginx/conf.d/default.conf
       - ../frontend/build:/usr/share/nginx/html/
       - ../docs/:/usr/share/nginx/html/api/docs/
-
+      - static_value:/var/html/static/
+      - media_value:/var/html/media/
     depends_on:
       - web
 
