--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -1,6 +1,7 @@
 server {
     listen 80;
     server_name 158.160.20.67;
+    client_max_body_size 5M;
 
     location /api/docs/ {
         root /usr/share/nginx/html;
